--- a/index.html
+++ b/index.html
@@ -53,61 +53,9 @@
         <div uk-slider="center: true" id="gallery">
             <div class="uk-position-relative uk-visible-toggle uk-light" tabindex="-1">
                 <ul class="uk-slider-items uk-child-width-1-2@s" uk-grid uk-height-match="target: > li > .uk-card">
-                    <li>
-                        <div class="uk-card uk-card-default">
-                            <div class="uk-card-media-top img-container">
-                                <img src="assets/addiction-adult-blond-1624264.jpg" alt="">
-                            </div>
-                            <div class="uk-card-body">
-                                <h3 class="uk-card-title">Picture 1</h3>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
-                            </div>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="uk-card uk-card-default">
-                            <div class="uk-card-media-top img-container">
-                                <img src="assets/ballpen-black-and-white-communication-934062.jpg" alt="">
-                            </div>
-                            <div class="uk-card-body">
-                                <h3 class="uk-card-title">Picture 2</h3>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
-                            </div>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="uk-card uk-card-default">
-                            <div class="uk-card-media-top">
-                                <img src="assets/black-and-white-books-connection-251225.jpg" alt="">
-                            </div>
-                            <div class="uk-card-body">
-                                <h3 class="uk-card-title">Picture 3</h3>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
-                            </div>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="uk-card uk-card-default">
-                            <div class="uk-card-media-top">
-                                <img src="assets/asian-boys-community-923657.jpg" alt="">
-                            </div>
-                            <div class="uk-card-body">
-                                <h3 class="uk-card-title">Picture 4</h3>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
-                            </div>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="uk-card uk-card-default">
-                            <div class="uk-card-media-top">
-                                <img src="assets/basketball-court-black-and-white-casual-428318.jpg" alt="">
-                            </div>
-                            <div class="uk-card-body">
-                                <h3 class="uk-card-title">Picture 5</h3>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
-                            </div>
-                        </div>
-                    </li>
+                    <div id="isi-gallery">
+
+                    </div>
                 </ul>
                 <a class="uk-position-center-left uk-position-small uk-hidden-hover" href="#" uk-slidenav-previous uk-slider-item="previous"></a>
                 <a class="uk-position-center-right uk-position-small uk-hidden-hover" href="#" uk-slidenav-next uk-slider-item="next"></a>
@@ -122,5 +70,7 @@
             <a href="https://bit.ly/2kIA0xK">Join Us</a>
         </div>
         <p>All Rights Belong To Their Respectfull Owner.</p>
+        <script src="https://www.gstatic.com/firebasejs/5.5.8/firebase.js"></script>
+        <script src="js/index.js"></script>
     </body>
 </html>
