--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                     <!--Ordered List (Number)-->
                     <li><a class="uk-link-heading" href="#gallery">Gallery</a></li>
                     <li><a class="uk-link-heading" href="#home">Learn More</a></li>
+                    <li><a class="uk-link-heading" href="upload.html">Uload</a></li>
                 </ul>
             </nav>
         </header>
