--- a/upload.html
+++ b/upload.html
@@ -43,6 +43,6 @@
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
         <script src="https://www.gstatic.com/firebasejs/5.5.8/firebase.js"></script>
-        <script src="upload.js"></script>
+        <script src="js/upload.js"></script>
     </body>
 </html>
