--- a/upload.html
+++ b/upload.html
@@ -20,7 +20,7 @@
                         <input type="text" id="nama" placeholder="nama">
                     </div>
                     <div>
-                        <textarea name="deskripsi" id="deskripsi" cols="30" rows="10" placeholder="deskripsi"></textarea>
+                        <input type="text" id="deskripsi" placeholder="uploaded by me">
                     </div>
                     <div>
                         <input type="file" onchange="previewFile()">
