--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             </p>
         </section>
     </main>
-    <div uk-slider="center: true" id="gallery">
+    <div uk-slider="ratio: false center: true" id="gallery">
         <div class="uk-position-relative uk-visible-toggle uk-light" tabindex="-1">
             <ul id="isi-gallery" class="uk-slider-items uk-child-width-1-2@s" uk-grid uk-height-match="target: > li > .uk-card">
 
